--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 8050"
   },
   "dependencies": {
+    "canvas": "^2.6.1",
+    "jsdom": "^16.4.0",
     "next": "10.0.7",
+    "next-transpile-modules": "^6.3.0",
+    "node-blob": "0.0.2",
+    "ol": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
